adds swagger documentation for remaining endpoints of interest
